<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_very_light"
    android:orientation="vertical"
    tools:context=".NotesTakerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_save"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/save_button"

                android:padding="8dp"
                android:src="@drawable/ic_check_24" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/edit_title"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:maxLines="1"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_notes"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_notes_field"
        android:textColor="@color/black"
        android:textSize="18sp" />

</androidx.appcompat.widget.LinearLayoutCompat>